<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sasa" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_emailLogin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".95"
                    android:background="@drawable/group_top"
                    android:drawableLeft="@mipmap/mail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_passwordLogin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight=".95"
                    android:background="@drawable/group_bottom"
                    android:drawableLeft="@mipmap/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp">

                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".95"
                    android:gravity="center_vertical">

                    <Button
                        android:id="@+id/btn_submit_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button1"
                        android:text="@string/log_in"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/forgot_paasword_"
                        android:textColor="#26a69a" />
                </RelativeLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/login_spinner"
                style="=@android:style/Widget.ProgressBar.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:indeterminate="true" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>